[workspace]
members = ["contracts/*"]

[profile.release.package.fee-abstraction]
codegen-units = 1
incremental = false

[profile.release.package.cw-ibc-query]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false