[package]
name = "fee-abstraction"
version = "0.1.0"
authors = ["expertdicer@gmail.com"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-ibc-query = { path = "../../packages/cw-ibc-query"}
cw-utils = { version = "0.14.0" }
cw2 = { version = "0.14.0" }
cw-storage-plus = { version = "0.14.0" }
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cw-osmo-proto = "0.1.0"
prost = "0.9.0"
base64 = "0.20.0"

[dev-dependencies]
assert_matches = "1"
derivative = "2"
